k8s/definitions/acr_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-awesome-app-pod
spec:
  containers:
    - name: test
      image: activityplannerdev.azurecr.io/main
      imagePullPolicy: IfNotPresent
  imagePullSecrets:
    - name: acr
