k8s/definitions/php_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
      tier: backend
  template:
    metadata:
      labels:
        app: php
        tier: backend
    spec:
      volumes:
      - name: code
        persistentVolumeClaim:
          claimName: code
      containers:
      - name: php
        image: activityplannerdev.azurecr.io/php
        imagePullPolicy: Always
        volumeMounts:
        - name: code
          mountPath: /code
      imagePullSecrets:
      - name: acr
