k8s/definitions/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-api
  template:
    metadata:
      labels:
        app: db-api
    spec:
      containers:
      - name: db-api
        image: activityplannerdev.azurecr.io/api-flask
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: db-api
  labels:
    service: db-api
spec:
  selector:
    app: db-api
  ports:
  - port: 5000
    targetPort: 5000
