k8s/definitions/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
      tier: backend
  template:
    metadata:
      labels:
        app: php
        tier: backend
    spec:
      volumes:
      - name: code
        persistentVolumeClaim:
          claimName: code
      containers:
      - name: php
        image: activityplannerdev.azurecr.io/php
        imagePullPolicy: Always
        # lifecycle:
        #   postStart:
        #     exec:
        #       command: ["/bin/bash", "-c", "cp /var/www/html /code -r"]
        volumeMounts:
        - name: code
          mountPath: /code
      imagePullSecrets:
      - name: acr

---
#https://www.cloudsigma.com/deploy-a-php-application-on-a-kubernetes-cluster-with-ubuntu-18-04/
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    tier: backend
spec:
  selector:
    app: php
    tier: backend
  ports:
  - protocol: TCP
    port: 9000
