k8s/definitions/public-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx

#TODO: This is temporary until I CBA to add an ingress controller: https://learn.microsoft.com/en-us/azure/aks/ingress-basic?tabs=azure-cli
